bug fixes for matplotlib framework

--- a/Topic_Model_Visualization.ipynb
+++ b/Topic_Model_Visualization.ipynb
@@ -7,7 +7,7 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMaGQbAzxiwuxL6quZbBq+C",
+      "authorship_tag": "ABX9TyMta3RYl7lOJ0Uzzooty8Ei",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,8 +59,13 @@
         "warnings.filterwarnings(\"ignore\",category=DeprecationWarning)\n",
         "logging.basicConfig(format='%(asctime)s : %(levelname)s : %(message)s', level=logging.ERROR)\n",
         "\n",
+        "\n",
+        "#PyLDAVis\n",
         "!pip install pyLDAVis\n",
-        "!pip install --upgrade pandas"
+        "import pyLDAvis.gensim_models\n",
+        "!pip install --upgrade pandas\n",
+        "pyLDAvis.enable_notebook()\n",
+        "warnings.filterwarnings(\"ignore\",category=DeprecationWarning)"
       ],
       "execution_count": null,
       "outputs": []
@@ -228,6 +233,7 @@
       "source": [
         "# Sentence Coloring of N Sentences\n",
         "from matplotlib.patches import Rectangle\n",
+        "import matplotlib.colors as mcolors\n",
         "\n",
         "def sentences_chart(lda_model=lda_model, corpus=corpus, start = 0, end = 100):\n",
         "    corp = corpus[start:end]\n",
@@ -321,24 +327,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ugCc287Txyup"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "r8QsAIFIHN6Y"
       },
       "source": [
-        "import pyLDAvis.gensim_models\n",
-        "pyLDAvis.enable_notebook()\n",
         "vis = pyLDAvis.gensim_models.prepare(lda_model, corpus, dictionary=lda_model.id2word)\n",
-        "warnings.filterwarnings(\"ignore\",category=DeprecationWarning)\n",
         "vis"
       ],
       "execution_count": null,
