Keyword extraction complete

--- a/Keyword_extraction.ipynb
+++ b/Keyword_extraction.ipynb
@@ -7,7 +7,7 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOhhb8Is+8IO9eERFftFjKo",
+      "authorship_tag": "ABX9TyPGLFrEIpyw1GopaWk/UAxW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
         "!pip install --upgrade pandas\n",
         "import pandas as pd\n",
         "import RAKE\n",
-        "import operator"
+        "import operator, csv, re"
       ],
       "execution_count": null,
       "outputs": []
@@ -78,32 +78,24 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "f5qOgDlIqWgx"
+      },
+      "source": [
+        "# Read In Data from File"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "9UoaBmUZ5F-d"
       },
       "source": [
-        "df = pd.read_csv('/content/CSI Customer Response.csv',error_bad_lines=False)\n",
-        "print(df.shape)\n",
-        "df\n",
-        "\n",
-        "def sent_to_words(sentences):\n",
-        "    for sent in sentences:\n",
-        "        sent = re.sub('\\S*@\\S*\\s?', '', sent)  # remove emails\n",
-        "        sent = re.sub('\\s+', ' ', sent)  # remove newline chars\n",
-        "        sent = re.sub(\"\\'\", \"\", sent)  # remove single quotes\n",
-        "        sent = gensim.utils.simple_preprocess(str(sent), deacc=True) \n",
-        "        yield(sent)  \n",
-        "\n",
-        "# Convert to list\n",
-        "df = df.rename(columns={'customer;': 'customer'})\n",
-        "data = df.customer.values.tolist()\n",
-        "data_words = list(sent_to_words(data))\n",
-        "#print(df.columns)\n",
-        "\n",
-        "#print(df['customer'])\n",
-        "\n",
-        "print(data_words)"
+        "#df = pd.read_csv('/content/CSI Customer Response.csv',error_bad_lines=False)\n",
+        "#print(df.shape)\n",
+        "#df\n",
+        "filename = '/content/CSI Customer Response.csv'"
       ],
       "execution_count": null,
       "outputs": []
@@ -123,23 +115,6 @@
         "id": "PunCXjUm6Z59"
       },
       "source": [
-        "filename = '/content/CSI Customer Response.csv'\n",
-        "import csv\n",
-        "import re\n",
-        "#next(filename) # Skip header\n",
-        "\n",
-        "with open(filename, 'r') as csvfile:\n",
-        "    test = \"\"\n",
-        "    datareader = csv.reader(csvfile)\n",
-        "    for row in datareader:\n",
-        "      row = listToString(row)\n",
-        "      row =  re.sub(pattern = \"[^\\w\\s]\",repl = \"\",string = row) #Removes semi colon\n",
-        "      row = re.sub('\\S*@\\S*\\s?', '', row)  # remove emails\n",
-        "      row = re.sub('\\s+', ' ', row)  # remove newline chars\n",
-        "      row = re.sub(\"\\'\", \"\", row)\n",
-        "      row = row.encode('ascii', 'ignore').decode('ascii') #  strips all non-ASCII characters\n",
-        "      print(row)\n",
-        "'''\n",
         "# Function to convert list to string \n",
         "def listToString(s): \n",
         "    \n",
@@ -152,20 +127,19 @@
         "    \n",
         "    # return string  \n",
         "    return str1 \n",
-        "        \n",
-        "        \n",
-        "# Driver code    \n",
-        "#s = ['Geeks', 'for', 'Geeks']\n",
-        "print(listToString(test)) \n",
-        "test1 = listToString(test)\n",
-        "test =  re.sub(pattern = \"[^\\w\\s]\",repl = \"\",string = test1) #Removes semi colon\n",
-        "test = re.sub('\\S*@\\S*\\s?', '', test)  # remove emails\n",
-        "test = re.sub('\\s+', ' ', row)  # remove newline chars\n",
-        "test = re.sub(\"\\'\", \"\", row)\n",
-        "test = test.encode('ascii', 'ignore').decode('ascii') #  strips all non-ASCII characters\n",
         "\n",
-        "print(test)\n",
-        "'''"
+        "with open(filename, 'r') as csvfile:\n",
+        "    datareader = csv.reader(csvfile)\n",
+        "    for row in datareader:\n",
+        "      row = listToString(row)\n",
+        "      row =  re.sub(pattern = \"[^\\w\\s]\",repl = \"\",string = row) #Removes semi colon\n",
+        "      row = re.sub('\\S*@\\S*\\s?', '', row)  # remove emails\n",
+        "      row = re.sub('\\s+', ' ', row)  # remove newline chars\n",
+        "      row = re.sub(\"\\'\", \"\", row)\n",
+        "      row = row.encode('ascii', 'ignore').decode('ascii') #  strips all non-ASCII characters\n",
+        "      print(row)\n",
+        "      keywords = rake_object.run(row)\n",
+        "      print(\"Keywords:\", keywords)\n"
       ],
       "execution_count": null,
       "outputs": []
