extracted keywords pending evaluation

--- a/Keyword_extraction.ipynb
+++ b/Keyword_extraction.ipynb
@@ -7,7 +7,7 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPGLFrEIpyw1GopaWk/UAxW",
+      "authorship_tag": "ABX9TyNVS42LY3DCdnH8PPvYKxYw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,26 +53,7 @@
         "import sys\n",
         "# !{sys.executable} -m spacy download en\n",
         "import re, numpy as np, pandas as pd\n",
-        "from pprint import pprint\n",
-        "\n",
-        "# Gensim\n",
-        "import gensim, spacy, logging, warnings\n",
-        "import gensim.corpora as corpora\n",
-        "from gensim.utils import lemmatize, simple_preprocess\n",
-        "from gensim.models import CoherenceModel\n",
-        "import matplotlib.pyplot as plt\n",
-        "\n",
-        "# NLTK Stop words\n",
-        "from nltk.corpus import stopwords\n",
-        "import nltk\n",
-        "nltk.download('stopwords')\n",
-        "stop_words = stopwords.words('english')\n",
-        "# stop_words.extend(['from', 'subject', 're', 'edu', 'use', 'not', 'would', 'say', 'could', '_', 'be', 'know', 'good', 'go', 'get', 'do', 'done', 'try', 'many', 'some', 'nice', 'thank', 'think', 'see', 'rather', 'easy', 'easily', 'lot', 'lack', 'make', 'want', 'seem', 'run', 'need', 'even', 'right', 'line', 'even', 'also', 'may', 'take', 'come'])\n",
-        "\n",
-        "%matplotlib inline\n",
-        "warnings.filterwarnings(\"ignore\",category=DeprecationWarning)\n",
-        "logging.basicConfig(format='%(asctime)s : %(levelname)s : %(message)s', level=logging.ERROR)\n",
-        "warnings.filterwarnings(\"ignore\",category=DeprecationWarning)"
+        "from pprint import pprint"
       ],
       "execution_count": null,
       "outputs": []
@@ -128,6 +109,8 @@
         "    # return string  \n",
         "    return str1 \n",
         "\n",
+        "rake_object = RAKE.Rake(\"SmartStoplist.txt\")\n",
+        "\n",
         "with open(filename, 'r') as csvfile:\n",
         "    datareader = csv.reader(csvfile)\n",
         "    for row in datareader:\n",
@@ -139,7 +122,7 @@
         "      row = row.encode('ascii', 'ignore').decode('ascii') #  strips all non-ASCII characters\n",
         "      print(row)\n",
         "      keywords = rake_object.run(row)\n",
-        "      print(\"Keywords:\", keywords)\n"
+        "      print(keywords)"
       ],
       "execution_count": null,
       "outputs": []
