FIxed Bugs in Gensim model and saved model

--- a/Topic_Model_Visualization.ipynb
+++ b/Topic_Model_Visualization.ipynb
@@ -7,7 +7,7 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMta3RYl7lOJ0Uzzooty8Ei",
+      "authorship_tag": "ABX9TyOLkgQzhSJPqwwfZVPQgCEA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -80,8 +80,9 @@
         "#df = pd.read_json('https://raw.githubusercontent.com/selva86/datasets/master/newsgroups.json')\n",
         "#df = df.loc[df.target_names.isin(['soc.religion.christian', 'rec.sport.hockey', 'talk.politics.mideast', 'rec.motorcycles']) , :]\n",
         "\n",
-        "df = pd.read_csv('/content/Suggestions field.csv',error_bad_lines=False)\n",
+        "df = pd.read_csv('/content/CSI Customer Response.csv',error_bad_lines=False)\n",
         "print(df.shape)\n",
+        "df.rename(columns={'customer;': 'customer'}, inplace=True)\n",
         "df\n",
         "\n",
         "def sent_to_words(sentences):\n",
@@ -93,7 +94,7 @@
         "        yield(sent)  \n",
         "\n",
         "# Convert to list\n",
-        "data = df.suggestions.values.tolist()\n",
+        "data = df.customer.values.tolist()\n",
         "data_words = list(sent_to_words(data))\n",
         "print(data_words)\n"
       ],
@@ -150,7 +151,35 @@
         "                                           iterations=100,\n",
         "                                           per_word_topics=True)\n",
         "\n",
-        "pprint(lda_model.print_topics())"
+        "pprint(lda_model.print_topics())\n",
+        "\n",
+        "import pickle\n",
+        "\n",
+        "\n",
+        "pickle.dump(lda_model, 'lda_model_gensim.pk')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fc-P40MifEqi"
+      },
+      "source": [
+        "# Save The LDA Gensim Model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-JbcgzgMelZC"
+      },
+      "source": [
+        "from gensim.test.utils import datapath\n",
+        "\n",
+        "temp_file = datapath(\"/content/saved_gensim_model\")\n",
+        "lda_model.save(temp_file)"
       ],
       "execution_count": null,
       "outputs": []
