Clean data and output to dataFrame

--- a/Keyword_extraction.ipynb
+++ b/Keyword_extraction.ipynb
@@ -7,7 +7,7 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNVS42LY3DCdnH8PPvYKxYw",
+      "authorship_tag": "ABX9TyPI1rAJJLKv1/r4R4Cudgjw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -111,18 +111,50 @@
         "\n",
         "rake_object = RAKE.Rake(\"SmartStoplist.txt\")\n",
         "\n",
+        "def Sort_Tuple(tup):\n",
+        "   tup.sort(key= lambda x:x[1])\n",
+        "   return tup\n",
+        "\n",
+        "# create DataFrame    \n",
+        "Rake_Final_Output = pd.DataFrame()\n",
+        "\n",
+        "# Clean every sentence\n",
+        "def clean_sentences(response):\n",
+        "  response =  re.sub(pattern = \"[^\\w\\s]\",repl = \"\",string = response) #Removes semi colon\n",
+        "  response = re.sub('\\S*@\\S*\\s?', '', response)  # remove emails\n",
+        "  response = re.sub('\\s+', ' ', response)  # remove newline chars\n",
+        "  response = re.sub(\"\\'\", \"\", response)\n",
+        "  response = response.encode('ascii', 'ignore').decode('ascii') #  strips all non-ASCII characters like emojis\n",
+        "  return response\n",
+        "\n",
         "with open(filename, 'r') as csvfile:\n",
         "    datareader = csv.reader(csvfile)\n",
         "    for row in datareader:\n",
-        "      row = listToString(row)\n",
-        "      row =  re.sub(pattern = \"[^\\w\\s]\",repl = \"\",string = row) #Removes semi colon\n",
-        "      row = re.sub('\\S*@\\S*\\s?', '', row)  # remove emails\n",
-        "      row = re.sub('\\s+', ' ', row)  # remove newline chars\n",
-        "      row = re.sub(\"\\'\", \"\", row)\n",
-        "      row = row.encode('ascii', 'ignore').decode('ascii') #  strips all non-ASCII characters\n",
-        "      print(row)\n",
-        "      keywords = rake_object.run(row)\n",
-        "      print(keywords)"
+        "      comment = listToString(row) # Convert every sentence of file to string\n",
+        "      clean_sentence = clean_sentences(comment) # obtain clean data\n",
+        "      keywords = rake_object.run(clean_sentence) \n",
+        "      keywords=Sort_Tuple(rake_object.run(clean_sentence))[-1:]     \n",
+        "\n",
+        "      # Create Output dataframe for Keywords \n",
+        "      Output = pd.DataFrame(keywords, columns =['Word', 'KeywordScore']) \n",
+        "      Output['Keywords']=keywords\n",
+        "      Output['KeywordScore'] = Output['KeywordScore'].astype('float')\n",
+        "      #Output['Response']=df.Question[x]\n",
+        "      Output['Customer Response']=comment\n",
+        "\n",
+        "      # Append Dataframe to Table \n",
+        "      Rake_Final_Output = Rake_Final_Output.append(Output, ignore_index=True)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rqr0fLISkYYn"
+      },
+      "source": [
+        "print(Rake_Final_Output)"
       ],
       "execution_count": null,
       "outputs": []
